edition = "2023";

package otterscale.large_language_model.v1;

import "google/protobuf/empty.proto";

option go_package = "github.com/otterscale/otterscale/api/large_language_model/v1;pb";

service LargeLanguageModelService {
  rpc CheckInfrastructureStatus(CheckInfrastructureStatusRequest) returns (CheckInfrastructureStatusResponse);
  rpc ListLargeLanguageModels(ListLargeLanguageModelsRequest) returns (ListLargeLanguageModelsResponse);
  rpc GetLargeLanguageModel(GetLargeLanguageModelRequest) returns (LargeLanguageModel);
  rpc CreateLargeLanguageModel(CreateLargeLanguageModelRequest) returns (LargeLanguageModel);
  rpc DeleteLargeLanguageModel(DeleteLargeLanguageModelRequest) returns (google.protobuf.Empty);
}

message LargeLanguageModel {
  string id = 1;
  string name = 2;
  string description = 3;
  string version = 4;
  string comment = 5;
}

message CheckInfrastructureStatusRequest {
  string scope_uuid = 1;
  string facility_name = 2;
}

message CheckInfrastructureStatusResponse {
  enum Result {
    UNKNOWN = 0;
    OK = 11;
    NOT_INSTALLED = 21;
    FAILED = 22;
    PENDING = 31;
  }
  Result result = 1;
}

message ListLargeLanguageModelsRequest {
  string scope_uuid = 1;
  string facility_name = 2;
}

message ListLargeLanguageModelsResponse {
  repeated LargeLanguageModel large_language_models = 1;
}

message GetLargeLanguageModelRequest {
  string id = 1;
}

message CreateLargeLanguageModelRequest {
  string name = 1;
  string description = 2;
  string version = 3;
  string comment = 4;
}

message DeleteLargeLanguageModelRequest {
  string id = 1;
}
